second commit, project has many Scaffolds and I want to add DatePicker

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="profile_title">Профиль</string>
     <string name="update_profile_title">Редактирование профиля</string>
 
-    <string name="list_hygiene_title">Процедуры</string>
+    <string name="list_procedure_title">Процедуры</string>
     <string name="list_therapy_title">Лечение</string>
 
     <string name="create_procedure">Создание процедуры</string>
